2003-02-25  Will Cohen <wcohen@redhat.com>

	* utils/opcontrol (do_deinit): Correct search for /dev/oprofile.

2003-02-24  Dave Jones <davej@codemonkey.org.uk>

	* module/x86/op_apic.[c|h]: move NMI gate setup to architecture
	  specific SET_NMI_GATE macro. x86=no change.
	  Make x86-64 use the kernels _set_gate instead of its own open
	  coded variant.

2003-02-23  John Levon  <levon@movementarian.org>

	* version-1.h.in: another rename

2003-02-23  John Levon  <levon@movementarian.org>

	* configure.in: set up OP_DATADIR and OP_BINDIR

	* gui/oprof_start.cpp:
	* libregex/demangle_symbol.cpp: use the above

	* version_tpl.h.in: move to ...

	* version.h.in.in: ... here

2003-02-23  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* configure.in: add AX_COPY_IF_CHANGE() use it to generate version.h
	* .cvsignore: update

	* gui/Makefile.am:
	* gui/oprof_start.cpp:
	* libregex/Makefile.am:
	* libregex/demangle_symbol.cpp: don't use -DBINDIR, rather include
	  version.h to get install path

2003-02-23  John Levon  <levon@movementarian.org>

	* README: quick start build insns

2003-02-23  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* libregex/Makefile.am: install stl.pat in $prefix/share/oprofile
	* libregex/demangle_symbol.cpp: use DATADIR not BINDIR
	* libregex/magle-name.txt: add test for pointer
	* libregex/stl.pat: partial support for pointer

2003-02-23  John Levon  <levon@movementarian.org>

	* autogen.sh: error out if options passed

2003-02-23  John Levon  <levon@movementarian.org>

	* libregex/op_regex.h:
	* libregex/regex_test.cpp: fix std::

2003-02-23  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/demangle_symbol.cpp:
	* libutil++/demangle_symbol.h: move to
	* libregex/demangle_symbol.cpp:
	* libregex/demangle_symbol.h: here to avoid circular reference between
	  libutil++ and libregex
	* libregex/Makefile.am:
	* libutil++/Makefile.am: update according to file move

	* pp/Makefile.am:
	* pp/op_time.cpp:
	* pp/op_time_options.cpp: